--- a/source/index.html
+++ b/source/index.html
@@ -12,22 +12,19 @@
     <div class="logo">
       <a class="link logo__link" href="#no__scroll">
         <picture>
-          <source type="image/webp" media="(min-width: 1024px)" srcset="image/content/grecia.webp 1x, image/content/grecia@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 768px)" srcset="image/content/grecia-tb.webp 1x, image/content/grecia-tb@2x.webp 2x">
-          <source type="image/webp" media="(min-width: 320px)" srcset="image/content/grecia-mb.webp 1x">
-          <img class="logo__image" src="image/icons/logo.png" alt="Logo" loading="lazy">
+          <source type="image/webp" media="(min-width: 1024px)" srcset="image/icons/logo@2x.webp 2x">
+          <source type="image/webp" media="(min-width: 320px)" srcset="image/icons/logo.webp 1x">
+          <img class="logo__image" src="image/icons/logo.png" alt="Logo"  width="106" height="30">
         </picture>
       </a>
     </div>
     <a class="link link-web" href="#no__scroll">
       <picture>
-        <source type="image/webp" media="(min-width: 1024px)" srcset="image/content/grecia.webp 1x, image/content/grecia@2x.webp 2x">
-        <source type="image/webp" media="(min-width: 768px)" srcset="image/content/grecia-tb.webp 1x, image/content/grecia-tb@2x.webp 2x">
-        <source type="image/webp" media="(min-width: 320px)" srcset="image/content/grecia-mb.webp 1x">
-        <img class="link-web__image" src="image/icons/link.png" alt="Link Web" loading="lazy">
+        <source type="image/webp" media="(min-width: 1024px)" srcset="image/icons/link@2x.webp 2x">
+        <source type="image/webp" media="(min-width: 320px)" srcset="image/icons/link.webp 1x">
+        <img class="link-web__image" src="image/icons/link.png" alt="Link Web" width="20" height="20">
       </picture>
     </a>
-    </div>
   </div>
 </body>
 </html>
