--- a/source/index.html
+++ b/source/index.html
@@ -95,6 +95,6 @@
       </div>
     </section>
   </main>
-  <script src="js/script.min.js" type="module"></script>
+  <script src="js/script.js" type="module"></script>
 </body>
 </html>
